# HR-Resume-Screening-Assistant

./: .replit  README.md  hr_assistant.db  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
docs/: ai_integration.md  architecture.md  code_structure.md  database.md  deployment.md  user_manual.md
src/: ai_evaluator.py  analytics.py  database.py  docx_processor.py  main.py  minimal_test.py  models.py  pdf_processor.py  report_generator.py  test.py  test_app.py  theme_config.py  utils.py
